5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1836_2603.log
== TEST (2019-06-27 10:45:50) 
-- CODE:
from numpy import*
vet = array(eval(input())
vet = sorted(vet, reverse=True)
print(vet)
-- ERROR:
File "XXXX", line 3
    vet = sorted(vet, reverse=True)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:46:06) 
-- CODE:
from numpy import*
vet = array(eval(input())
vetor = sorted(vet, reverse=True)
print(vet)
-- ERROR:
File "XXXX", line 3
    vetor = sorted(vet, reverse=True)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:52:56) 
-- CODE:
from numpy import*
vet = array(eval(input())
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet1,vet2,vet3,vet4])
print(vetor)
#vetor = zeros((4,4))
for i in range(0,5):
	for j in range(0,5):
		#vetor[j,i] = vet
-- ERROR:
File "XXXX", line 3
    vet1 = vet[0,:]
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:53:27) 
-- CODE:
from numpy import*
vet = array(eval(input())
veta = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet1,vet2,vet3,vet4])
print(vetor)
#vetor = zeros((4,4))
for i in range(0,5):
	for j in range(0,5):
		#vetor[j,i] = vet
-- ERROR:
File "XXXX", line 3
    veta = vet[0,:]
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:53:41) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet1,vet2,vet3,vet4])
print(vetor)
#vetor = zeros((4,4))
for i in range(0,5):
	for j in range(0,5):
		#vetor[j,i] = vet
-- ERROR:
File "XXXX", line 17
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:53:59) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet1,vet2,vet3,vet4])
print(vetor)
#vetor = zeros((4,4))
#for i in range(0,5):
#	for j in range(0,5):
		#vetor[j,i] = vet
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:56:09) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet1,vet2,vet3,vet4])
print(vetor)
#vetor = zeros((4,4))
#for i in range(0,5):
#	for j in range(0,5):
		#vetor[j,i] = vet
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:16:50) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet1,vet2,vet3,vet4])
print(vetor)
#vetor = zeros((4,4))
#for i in range(0,5):
#	for j in range(0,5):
		#vetor[j,i] = vet
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:17:23) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet1,vet2,vet3,vet4])
print(vetor)
#vetor = zeros((4,4))
#for i in range(0,5):
#	for j in range(0,5):
		#vetor[j,i] = vet
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:17:29) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet1,vet2,vet3,vet4])
print(vetor)
#vetor = zeros((4,4))
#for i in range(0,5):
#	for j in range(0,5):
		#vetor[j,i] = vet
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:19:08) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet4,vet3,vet2,vet1])
print(vetor)
#vetor = zeros((4,4))
#for i in range(0,5):
#	for j in range(0,5):
		#vetor[j,i] = vet
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:20:44) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet4,vet3,vet2,vet1])
print(vetor)
vetor2 = zeros((4,4))
for i in range(0,5):
	for j in range(0,5):
		vetor2[j,i] = vetor[-j,-i]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:21:08) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet4,vet3,vet2,vet1])

vetor2 = zeros((4,4))
for i in range(0,4):
	for j in range(0,4):
		vetor2[j,i] = vetor[-j,-i]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:21:38) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet4,vet3,vet2,vet1])

vetor2 = zeros((4,4))
for i in range(0,4):
	for j in range(0,4):
		vetor2[j,i] = vetor[-j-1,-i-1]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:21:49) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet4,vet3,vet2,vet1])

vetor2 = zeros((4,4))
for i in range(0,4):
	for j in range(0,4):
		vetor2[j,i] = vetor[-j-1,-i-1]
print(vetor2)
-- EXECUTION TIME:
1.12031
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[1. 1. 1. 1.]
 [2. 2. 2. 2.]
 [3. 3. 3. 3.]
 [4. 4. 4. 4.]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[1. 1. 3. 4.]
 [2. 2. 3. 3.]
 [2. 3. 3. 3.]
 [1. 3. 4. 4.]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:22:28) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet4,vet3,vet2,vet1])

vetor2 = zeros((4,4))
for i in range(0,4):
	for j in range(0,4):
		vetor2[j,i] = vetor[-j-1,-i-1]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:22:56) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet4,vet3,vet2,vet1])

vetor2 = zeros((4,4),dtype = int)
for i in range(0,4):
	for j in range(0,4):
		vetor2[j,i] = vetor[-j-1,-i-1]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:23:18) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet1,vet2,vet3,vet4])

vetor2 = zeros((4,4),dtype = int)
for i in range(0,4):
	for j in range(0,4):
		vetor2[j,i] = vetor[-j-1,-i-1]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:23:26) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet1,vet2,vet3,vet4])

vetor2 = zeros((4,4),dtype = int)
for i in range(0,4):
	for j in range(0,4):
		vetor2[j,i] = vetor[-j-1,-i-1]
print(vetor2)
-- EXECUTION TIME:
1.03527
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[1 3 4 4]
 [2 3 3 3]
 [2 2 3 3]
 [1 1 3 4]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:23:32) 
-- CODE:
from numpy import*
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet1,vet2,vet3,vet4])

vetor2 = zeros((4,4),dtype = int)
for i in range(0,4):
	for j in range(0,4):
		vetor2[j,i] = vetor[-j-1,-i-1]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:25:07) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet1,vet2,vet3,vet4])

vetor2 = zeros((4,4),dtype = int)
for i in range(0,4):
	for j in range(0,4):
		vetor2[j,i] = vetor[-j-1,-i-1]
vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:25:12) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet1,vet2,vet3,vet4])

vetor2 = zeros((4,4),dtype = int)
for i in range(0,4):
	for j in range(0,4):
		vetor2[j,i] = vetor[-j-1,-i-1]
vetor2 = vetor2.T
print(vetor2)
-- EXECUTION TIME:
1.1089
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 3 2 1]
 [4 3 2 1]
 [4 3 2 1]
 [4 3 2 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[1 2 2 1]
 [3 3 2 1]
 [4 3 3 3]
 [4 3 3 4]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:25:15) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet1,vet2,vet3,vet4])

vetor2 = zeros((4,4),dtype = int)
for i in range(0,4):
	for j in range(0,4):
		vetor2[j,i] = vetor[-j-1,-i-1]
vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:26:11) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet4,vet3,vet2,vet1])

vetor2 = zeros((4,4),dtype = int)
for i in range(0,4):
	for j in range(0,4):
		vetor2[j,i] = vetor[-j-1,-i-1]
vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:27:13) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet4,vet3,vet2,vet1])

vetor2 = zeros((4,4),dtype = int)
for i in range(0,4):
	for j in range(0,4):
		vetor2[j,i] = vetor[j-1,-i-1]
vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:28:42) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet4,vet3,vet2,vet1])

vetor2 = zeros((4,4),dtype = int)
vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:29:18) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet4,vet3,vet2,vet1])

#vetor2 = zeros((4,4),dtype = int)
#for i in range(0,4):
	#for j in range(0,4):
	#	vetor2[j,i] = vetor[j-1,-i-1]
vetor = vetor.T
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:29:47) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet4,vet3,vet2,vet1],dtype = int)

#vetor2 = zeros((4,4),dtype = int)
#for i in range(0,4):
	#for j in range(0,4):
	#	vetor2[j,i] = vetor[j-1,-i-1]
vetor = vetor.T
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:30:03) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet4,vet3,vet2,vet1],dtype = int)

#vetor2 = zeros((4,4),dtype = int)
#for i in range(0,4):
	#for j in range(0,4):
	#	vetor2[j,i] = vetor[j-1,-i-1]
#vetor = vetor.T
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:31:53) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)
for i in range(0,4):
	for j in range(0,4):
		vetor2[j,i] = vetor[j-1,-i-1]
vetor2 = vetor2.T
vetor3 = zeros((4,4),dtype = int)
for i in range(0,4):
	for j in range(0,4):
		vetor3[j,i] = vetor2[-j-1,i]
print(vetor3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:32:33) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)
for i in range(0,4):
	for j in range(0,4):
		vetor2[j,i] = vetor[j-1,-i-1]
vetor2 = vetor2.T
vetor3 = zeros((4,4),dtype = int)
for i in range(0,4):
	for j in range(0,4):
		vetor3[j,i] = vetor2[-j-1,i]
print(vetor3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:34:01) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
vet1 = vet1.T
vet2 = vet2.T
vet3 = vet3.T
vet4 = vet4.T
vetor = array([vet4,vet3,vet2,vet1],dtype = int)

#vetor2 = zeros((4,4),dtype = int)
#for i in range(0,4):
#	for j in range(0,4):
#		vetor2[j,i] = vetor[j-1,-i-1]
#vetor2 = vetor2.T

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:34:55) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))
vet1 = vet1.T
vet2 = vet2.T
vet3 = vet3.T
vet4 = vet4.T
vetor = array([vet4,vet3,vet2,vet1],dtype = int)

#vetor2 = zeros((4,4),dtype = int)
#for i in range(0,4):
#	for j in range(0,4):
#		vetor2[j,i] = vetor[j-1,-i-1]
#vetor2 = vetor2.T

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:35:18) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))
vet1 = vet1.T
vet2 = vet2.T
vet3 = vet3.T
vet4 = vet4.T
vetor = array([vet1,vet2,vet3,vet4],dtype = int)

#vetor2 = zeros((4,4),dtype = int)
#for i in range(0,4):
#	for j in range(0,4):
#		vetor2[j,i] = vetor[j-1,-i-1]
#vetor2 = vetor2.T

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:36:11) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))
vet1 = vet1.T
vet2 = vet2.T
vet3 = vet3.T
vet4 = vet4.T
vetor = array([vet4,vet3,vet2,vet1],dtype = int)

#vetor2 = zeros((4,4),dtype = int)
#for i in range(0,4):
#	for j in range(0,4):
#		vetor2[j,i] = vetor[j-1,-i-1]
#vetor2 = vetor2.T

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:36:36) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))
vet1 = vet1.T
vet2 = vet2.T
vet3 = vet3.T
vet4 = vet4.T
vetor = array([vet1,vet2,vet3,vet4],dtype = int)

#vetor2 = zeros((4,4),dtype = int)
#for i in range(0,4):
#	for j in range(0,4):
#		vetor2[j,i] = vetor[j-1,-i-1]
#vetor2 = vetor2.T

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:36:54) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))
vet1 = vet1.T
vet2 = vet2.T
vet3 = vet3.T
vet4 = vet4.T
vetor = array([vet4,vet3,vet2,vet1],dtype = int)

#vetor2 = zeros((4,4),dtype = int)
#for i in range(0,4):
#	for j in range(0,4):
#		vetor2[j,i] = vetor[j-1,-i-1]
#vetor2 = vetor2.T

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:40:05) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[0,j] = vet1[j]
for j in range(0,4):
	vetor2[1,j] = vet1[j]
for j in range(0,4):
	vetor2[2,j] = vet1[j]
for j in range(0,4):
	vetor2[3,j] = vet1[j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:40:13) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[0,j] = vet1[j]
for j in range(0,4):
	vetor2[1,j] = vet1[j]
for j in range(0,4):
	vetor2[2,j] = vet1[j]
for j in range(0,4):
	vetor2[3,j] = vet1[j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:40:24) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[0,j] = vet1[j]
for j in range(0,4):
	vetor2[1,j] = vet2[j]
for j in range(0,4):
	vetor2[2,j] = vet3[j]
for j in range(0,4):
	vetor2[3,j] = vet4[j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:40:52) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[3,:]
vet2 = vet[2,:]
vet3 = vet[1,:]
vet4 = vet[0,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[0,j] = vet1[j]
for j in range(0,4):
	vetor2[1,j] = vet2[j]
for j in range(0,4):
	vetor2[2,j] = vet3[j]
for j in range(0,4):
	vetor2[3,j] = vet4[j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:41:09) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[3,:]
vet2 = vet[2,:]
vet3 = vet[1,:]
vet4 = vet[0,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[3,j] = vet1[j]
for j in range(0,4):
	vetor2[2,j] = vet2[j]
for j in range(0,4):
	vetor2[1,j] = vet3[j]
for j in range(0,4):
	vetor2[0,j] = vet4[j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:41:42) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[3,:]
vet2 = vet[2,:]
vet3 = vet[1,:]
vet4 = vet[0,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[3,j] = vet1[-j]
for j in range(0,4):
	vetor2[2,j] = vet2[-j]
for j in range(0,4):
	vetor2[1,j] = vet3[-j]
for j in range(0,4):
	vetor2[0,j] = vet4[-j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:42:30) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[3,:]
vet2 = vet[2,:]
vet3 = vet[1,:]
vet4 = vet[0,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[3,-j] = vet1[j]
for j in range(0,4):
	vetor2[2,-j] = vet2[j]
for j in range(0,4):
	vetor2[1,-j] = vet3[j]
for j in range(0,4):
	vetor2[0,-j] = vet4[j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:43:23) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[3,:]
vet2 = vet[2,:]
vet3 = vet[1,:]
vet4 = vet[0,:]
vet1 = array(sorted(vet1, reverse=False))
vet2 = array(sorted(vet2, reverse=False))
vet3 = array(sorted(vet3, reverse=False))
vet4 = array(sorted(vet4, reverse=False))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[3,j] = vet1[j]
for j in range(0,4):
	vetor2[2,j] = vet2[j]
for j in range(0,4):
	vetor2[1,j] = vet3[j]
for j in range(0,4):
	vetor2[0,j] = vet4[j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:43:46) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[3,:]
vet2 = vet[2,:]
vet3 = vet[1,:]
vet4 = vet[0,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[3,j] = vet1[j]
for j in range(0,4):
	vetor2[2,j] = vet2[j]
for j in range(0,4):
	vetor2[1,j] = vet3[j]
for j in range(0,4):
	vetor2[0,j] = vet4[j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:44:12) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[3,:]
vet2 = vet[2,:]
vet3 = vet[1,:]
vet4 = vet[0,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[j,0] = vet1[j]
for j in range(0,4):
	vetor2[j,1] = vet2[j]
for j in range(0,4):
	vetor2[j,2] = vet3[j]
for j in range(0,4):
	vetor2[j,3] = vet4[j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:44:33) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[3,:]
vet2 = vet[2,:]
vet3 = vet[1,:]
vet4 = vet[0,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[j,0] = vet1[j]
for j in range(0,4):
	vetor2[j,1] = vet2[j]
for j in range(0,4):
	vetor2[j,2] = vet3[j]
for j in range(0,4):
	vetor2[j,3] = vet4[j]
vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:45:12) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[0,:]
vet2 = vet[1,:]
vet3 = vet[2,:]
vet4 = vet[3,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[j,0] = vet1[j]
for j in range(0,4):
	vetor2[j,1] = vet2[j]
for j in range(0,4):
	vetor2[j,2] = vet3[j]
for j in range(0,4):
	vetor2[j,3] = vet4[j]
vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:45:29) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[3,:]
vet2 = vet[2,:]
vet3 = vet[1,:]
vet4 = vet[0,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[j,0] = vet1[j]
for j in range(0,4):
	vetor2[j,1] = vet2[j]
for j in range(0,4):
	vetor2[j,2] = vet3[j]
for j in range(0,4):
	vetor2[j,3] = vet4[j]
vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:46:04) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[3,:]
vet2 = vet[2,:]
vet3 = vet[1,:]
vet4 = vet[0,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[-j,0] = vet1[j]
for j in range(0,4):
	vetor2[-j,1] = vet2[j]
for j in range(0,4):
	vetor2[-j,2] = vet3[j]
for j in range(0,4):
	vetor2[-j,3] = vet4[j]
vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:46:21) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[3,:]
vet2 = vet[2,:]
vet3 = vet[1,:]
vet4 = vet[0,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[-j-1,0] = vet1[j]
for j in range(0,4):
	vetor2[-j-1,1] = vet2[j]
for j in range(0,4):
	vetor2[-j-1,2] = vet3[j]
for j in range(0,4):
	vetor2[-j-1,3] = vet4[j]
vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:46:33) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[3,:]
vet2 = vet[2,:]
vet3 = vet[1,:]
vet4 = vet[0,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[-j-1,0] = vet1[j]
for j in range(0,4):
	vetor2[-j-1,1] = vet2[j]
for j in range(0,4):
	vetor2[-j-1,2] = vet3[j]
for j in range(0,4):
	vetor2[-j-1,3] = vet4[j]
vetor2 = vetor2.T
print(vetor2)
-- EXECUTION TIME:
1.0299
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[1 3 4 4]
 [2 3 3 3]
 [2 2 3 3]
 [1 1 3 4]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:46:37) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[3,:]
vet2 = vet[2,:]
vet3 = vet[1,:]
vet4 = vet[0,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[-j-1,0] = vet1[j]
for j in range(0,4):
	vetor2[-j-1,1] = vet2[j]
for j in range(0,4):
	vetor2[-j-1,2] = vet3[j]
for j in range(0,4):
	vetor2[-j-1,3] = vet4[j]
vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:47:26) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = vet[3,:]
vet2 = vet[2,:]
vet3 = vet[1,:]
vet4 = vet[0,:]
vet1 = array(sorted(vet1, reverse=True))
vet2 = array(sorted(vet2, reverse=True))
vet3 = array(sorted(vet3, reverse=True))
vet4 = array(sorted(vet4, reverse=True))

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[-j-1,0] = vet1[j]
for j in range(0,4):
	vetor2[-j-1,1] = vet2[j]
for j in range(0,4):
	vetor2[-j-1,2] = vet3[j]
for j in range(0,4):
	vetor2[-j-1,3] = vet4[j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:50:32) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[0,:])
vet2 = array(vet[1,:])
vet3 = array(vet[2,:])
vet4 = array(vet[3,:])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[0,j] = vet1[j]
for j in range(0,4):
	vetor2[1,j] = vet2[j]
for j in range(0,4):
	vetor2[2,j] = vet3[j]
for j in range(0,4):
	vetor2[3,j] = vet4[j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:50:37) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[0,:])
vet2 = array(vet[1,:])
vet3 = array(vet[2,:])
vet4 = array(vet[3,:])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[0,j] = vet1[j]
for j in range(0,4):
	vetor2[1,j] = vet2[j]
for j in range(0,4):
	vetor2[2,j] = vet3[j]
for j in range(0,4):
	vetor2[3,j] = vet4[j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:51:16) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[0,:])
vet2 = array(vet[1,:])
vet3 = array(vet[2,:])
vet4 = array(vet[3,:])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[0,j] = vet1[j]
for j in range(0,4):
	vetor2[1,j] = vet2[j]
for j in range(0,4):
	vetor2[2,j] = vet3[j]
for j in range(0,4):
	vetor2[3,j] = vet4[j]
vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:51:33) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[0,:])
vet2 = array(vet[1,:])
vet3 = array(vet[2,:])
vet4 = array(vet[3,:])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[0,j] = vet1[j]
for j in range(0,4):
	vetor2[1,j] = vet2[j]
for j in range(0,4):
	vetor2[2,j] = vet3[j]
for j in range(0,4):
	vetor2[3,j] = vet4[j]
#vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:52:08) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[0,:])
vet2 = array(vet[1,:])
vet3 = array(vet[2,:])
vet4 = array(vet[3,:])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[j,0] = vet1[j]
for j in range(0,4):
	vetor2[j,1] = vet2[j]
for j in range(0,4):
	vetor2[j,2] = vet3[j]
for j in range(0,4):
	vetor2[j,3] = vet4[j]
#vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:52:31) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[0,:])
vet2 = array(vet[1,:])
vet3 = array(vet[2,:])
vet4 = array(vet[3,:])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)

#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[0,j] = vet1[j]
for j in range(0,4):
	vetor2[1,j] = vet2[j]
for j in range(0,4):
	vetor2[2,j] = vet3[j]
for j in range(0,4):
	vetor2[3,j] = vet4[j]
#vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:53:42) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[0,:])
vet2 = array(vet[1,:])
vet3 = array(vet[2,:])
vet4 = array(vet[3,:])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
print(vet1)
#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[0,j] = vet1[j]
for j in range(0,4):
	vetor2[1,j] = vet2[j]
for j in range(0,4):
	vetor2[2,j] = vet3[j]
for j in range(0,4):
	vetor2[3,j] = vet4[j]
#vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:54:35) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[:,0])
vet2 = array(vet[:,1])
vet3 = array(vet[:,2])
vet4 = array(vet[:,3])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
print(vet1)
#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[0,j] = vet1[j]
for j in range(0,4):
	vetor2[1,j] = vet2[j]
for j in range(0,4):
	vetor2[2,j] = vet3[j]
for j in range(0,4):
	vetor2[3,j] = vet4[j]
#vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:54:44) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[:,0])
vet2 = array(vet[:,1])
vet3 = array(vet[:,2])
vet4 = array(vet[:,3])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
print(vet1)
#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[0,j] = vet1[j]
for j in range(0,4):
	vetor2[1,j] = vet2[j]
for j in range(0,4):
	vetor2[2,j] = vet3[j]
for j in range(0,4):
	vetor2[3,j] = vet4[j]
vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:54:50) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[:,0])
vet2 = array(vet[:,1])
vet3 = array(vet[:,2])
vet4 = array(vet[:,3])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
print(vet1)
#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[0,j] = vet1[j]
for j in range(0,4):
	vetor2[1,j] = vet2[j]
for j in range(0,4):
	vetor2[2,j] = vet3[j]
for j in range(0,4):
	vetor2[3,j] = vet4[j]
vetor2 = vetor2.T
print(vetor2)
-- EXECUTION TIME:
1.03232
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[4, 3, 2, 1]
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[4, 3, 2, 1]
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:54:55) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[:,0])
vet2 = array(vet[:,1])
vet3 = array(vet[:,2])
vet4 = array(vet[:,3])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
print(vet1)
#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[0,j] = vet1[j]
for j in range(0,4):
	vetor2[1,j] = vet2[j]
for j in range(0,4):
	vetor2[2,j] = vet3[j]
for j in range(0,4):
	vetor2[3,j] = vet4[j]
vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:56:59) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[:,0])
vet2 = array(vet[:,1])
vet3 = array(vet[:,2])
vet4 = array(vet[:,3])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
print(vet1)
#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[j,0] = vet1[j]
for j in range(0,4):
	vetor2[j,1] = vet2[j]
for j in range(0,4):
	vetor2[j,2] = vet3[j]
for j in range(0,4):
	vetor2[j,3] = vet4[j]
vetor2 = vetor2.T
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:58:32) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[:,0])
vet2 = array(vet[:,1])
vet3 = array(vet[:,2])
vet4 = array(vet[:,3])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
print(vet1)
#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[j,0] = vet1[j]
for j in range(0,4):
	vetor2[j,1] = vet2[j]
for j in range(0,4):
	vetor2[j,2] = vet3[j]
for j in range(0,4):
	vetor2[j,3] = vet4[j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:59:03) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[:,0])
vet2 = array(vet[:,1])
vet3 = array(vet[:,2])
vet4 = array(vet[:,3])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
print(vet1)
#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[j,0] = vet1[j]
for j in range(0,4):
	vetor2[j,1] = vet2[j]
for j in range(0,4):
	vetor2[j,2] = vet3[j]
for j in range(0,4):
	vetor2[j,3] = vet4[j]
print(vetor2)
-- EXECUTION TIME:
1.13566
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[4, 3, 2, 1]
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[4, 3, 2, 1]
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:59:11) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[:,0])
vet2 = array(vet[:,1])
vet3 = array(vet[:,2])
vet4 = array(vet[:,3])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
print(vet1)
#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[j,0] = vet1[j]
for j in range(0,4):
	vetor2[j,1] = vet2[j]
for j in range(0,4):
	vetor2[j,2] = vet3[j]
for j in range(0,4):
	vetor2[j,3] = vet4[j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:59:29) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[:,0])
vet2 = array(vet[:,1])
vet3 = array(vet[:,2])
vet4 = array(vet[:,3])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
print(vet1)
#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[j,0] = vet1[j]
for j in range(0,4):
	vetor2[j,1] = vet2[j]
for j in range(0,4):
	vetor2[j,2] = vet3[j]
for j in range(0,4):
	vetor2[j,3] = vet4[j]
print(vetor2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 12:00:34) 
-- CODE:
from numpy import*
from numpy.linalg import *
vet = array(eval(input()))
vet1 = array(vet[:,0])
vet2 = array(vet[:,1])
vet3 = array(vet[:,2])
vet4 = array(vet[:,3])
vet1 = sorted(vet1, reverse=True)
vet2 = sorted(vet2, reverse=True)
vet3 = sorted(vet3, reverse=True)
vet4 = sorted(vet4, reverse=True)
print(vet1)
#vetor = array([vet4,vet3,vet2,vet1],dtype = int)

vetor2 = zeros((4,4),dtype = int)

for j in range(0,4):
	vetor2[j,0] = vet1[j]
for j in range(0,4):
	vetor2[j,1] = vet2[j]
for j in range(0,4):
	vetor2[j,2] = vet3[j]
for j in range(0,4):
	vetor2[j,3] = vet4[j]
print(vetor2)
-- EXECUTION TIME:
1.19348
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[4, 3, 2, 1]
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[4, 3, 2, 1]
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
